# g42cloud-sdk-cpp

./: CHANGELOG.md  CMakeLists.txt  README.md  VERSION
core/: CMakeLists.txt
core/include/g42cloud/core/: Client.h  ClientBuilder.h  CoreExport.h  EXPORT.h  RequestParams.h
core/src/: Client.cpp  RequestParams.cpp
core/src/auth/: AuthCache.cpp  BasicCredentials.cpp  Credentials.cpp  GlobalCredentials.cpp  IamService.cpp  Region.cpp  Signer.cpp
core/src/bson/: Builder.cpp  Decimal128.cpp  Document.cpp  Oid.cpp  Types.cpp  Viewer.cpp
core/src/bson/impl/: LibBsonEncoder.cpp  LibBsonIterator.cpp
core/src/exception/: CallTimeoutException.cpp  ClientRequestException.cpp  ConnectionException.cpp  HostUnreachableException.cpp  RequestTimeoutException.cpp  RetryOutageException.cpp  SdkErrorMessage.cpp  SdkException.cpp  ServerResponseException.cpp  ServiceResponseException.cpp  SslHandShakeException.cpp
core/src/http/: FieldDef.cpp  HttpClient.cpp  HttpConfig.cpp  HttpRequest.cpp  HttpRequestDef.cpp  HttpResponse.cpp
core/src/utils/: Hasher.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp  Utils.cpp
ecs/src/v2/: CMakeLists.txt  EcsClient.cpp  EcsMeta.cpp  EcsRegion.cpp
ecs/src/v2/model/: AddServerGroupMemberRequest.cpp  (+297 more)
evs/src/v2/: CMakeLists.txt  EvsClient.cpp  EvsMeta.cpp  EvsRegion.cpp
ims/src/v2/: CMakeLists.txt  ImsClient.cpp  ImsMeta.cpp  ImsRegion.cpp
mpc/src/v1/: CMakeLists.txt  MpcClient.cpp  MpcMeta.cpp  MpcRegion.cpp
vpc/src/v2/: CMakeLists.txt  VpcClient.cpp  VpcMeta.cpp  VpcRegion.cpp
(+1879 files in other folders)
